--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,6 +3,12 @@
 :root {
   --clr-white: #fff;
   --clr-black: #000;
+  --clr-neongreen: #74E651;
+  --clr-green: #9EAC8B;
+  --clr-lightgreen: #bdd39e;
+  --clr-blue: #6B8699;
+  --clr-red: #C42121;
+  
 }
 * {
   margin: 0;
@@ -19,14 +25,14 @@ h1 {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  color: #fff;
+  color: var(--clr-white);
 }
 h2 {
   text-transform: uppercase;
-  color: #fff;
+  color: var(--clr-white);
   font-weight: 400;
   letter-spacing: 5px;
-  filter: drop-shadow(0 3px 2px #000);
+  filter: drop-shadow(0 3px 2px var(--clr-black));
 }
 
 /* 
@@ -74,6 +80,16 @@ nav {
   background-color: var(--clr-black);
   justify-content: space-around;
   align-items: center;
+}
+.hamburger.active:hover .strip:nth-child(1),
+.hamburger:hover .strip:nth-child(1),
+.hamburger.active:hover .strip:nth-child(2),
+.hamburger:hover .strip:nth-child(2),
+.hamburger.active:hover .strip:nth-child(3),
+.hamburger:hover .strip:nth-child(3) {
+  background-color: var(--clr-red);
+  height: .35rem;
+  width: 2.05rem;
 }
 .nav-link {
   padding: 0 2rem 0 2rem;
@@ -125,9 +141,9 @@ nav {
 .cta__home {
   max-width: 400px;
   text-decoration: none;
-  color: #FFF;
+  color: var(--clr-white);
   text-transform: uppercase;
-  border: 2px #FFF solid;
+  border: 2px var(--clr-white) solid;
   border-radius: 5px;
   padding: 10px 40px;
   margin: auto;
@@ -142,7 +158,7 @@ nav {
   color: var(--clr-black);
 }
 .social-link a:hover, nav a:hover {
-  color: #f2698d;
+  color: var(--clr-red);
   cursor: pointer;
 }
 .social-link {
@@ -455,7 +471,7 @@ nav {
 @media(max-width: 768px) {
     .nav-menu {
       position: fixed;
-      background-color: pink;
+      background-color: var(--clr-green);
       width: 50%;
       height: 100vh;
       padding: 3rem;
@@ -464,7 +480,7 @@ nav {
     }
     .nav-menu li {
       list-style-type: none;
-      border-top: 1px solid rgb(225, 92, 163);
+      border-top: 1px solid var(--clr-lightgreen);
       padding: 1rem;
       text-align: center;
     }
