--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,6 +3,7 @@
 :root {
   --clr-white: #fff;
   --clr-black: #000;
+  --clr-grey: #929191;
   --clr-neongreen: #74E651;
   --clr-green: #9EAC8B;
   --clr-lightgreen: #bdd39e;
@@ -118,10 +119,9 @@ nav {
 -----------------------------------------------------------*/
 .image-container {
   width: 100%;
-  background: url(/images/photos/pexels-darshak-pandya-4378759.jpg);
+  background: url(/images/photos/pexels-darshak-pandya-4378759.jpg) var(--clr-black) no-repeat;
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0 62%;
 }
 .home-container {
  height: 91.1vh;
@@ -129,24 +129,32 @@ nav {
  flex-direction: column;
 }
 .text-left {
+  height: 620px;
   margin: auto;
-  max-width: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+.text-left h1 {
+  white-space: nowrap; 
 }
 .home__text {
-  padding-bottom: 5rem;
+  max-width: 300px;
 }
 .cta__home {
-  max-width: 400px;
+  max-width: 200px;
+  margin: auto;
   text-decoration: none;
+  text-align: center;
   color: var(--clr-white);
   text-transform: uppercase;
   border: 2px var(--clr-white) solid;
   border-radius: 5px;
   padding: 10px 40px;
-  margin: auto;
+  box-shadow: var(--clr-grey) 0 0 5px 1px;
+}
+.cta__home:hover {
+  box-shadow: var(--clr-white) 0 0 5px 1px;
 }
 .social-icons {
   font-size: 20px;
@@ -470,7 +478,11 @@ nav {
 -----------------------------------------------------------*/
 @media(min-width: 200px) and (max-width: 480px) {
     .home__text {
-    width: 200px;
+    width: 250px;
+    margin: auto;
+    }
+    .home-logo h1 {
+      font-size: 1.2rem;
     }
 }
 @media(max-width: 768px) {
@@ -512,11 +524,17 @@ nav {
       transform: translateY(-10px) rotate(-45deg);
     }
     .social-icons {
-      width: 150px;
-      padding: 20px;
+      width: 200px;
+      font-size: 15px;
+      padding-top: 2rem;
       margin: 0 auto;
       left: 0;
       right: 0;
+      justify-content: space-between;
+      position: relative;
+    }
+    .image-container {
+      background-position: center;
     }
   }
   @media(min-width: 769px) {
@@ -539,6 +557,5 @@ nav {
       margin-left: 4rem;
       margin-top: 23vh;
     }
-
   }
 
