--- a/Css/styles.css
+++ b/Css/styles.css
@@ -15,21 +15,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-body {
   font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  
 }
 h1 {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%); */
   color: var(--clr-white);
 }
 h2 {
-  text-transform: uppercase;
   color: var(--clr-white);
   font-weight: 400;
   letter-spacing: 5px;
@@ -55,6 +49,7 @@ nav {
 .nav-menu {
   min-height: 70px;
   z-index: 100;
+  margin-right: 1rem;
 }
 .burger-container {
   width: 90%;
@@ -137,6 +132,10 @@ nav {
 }
 .text-left h1 {
   white-space: nowrap; 
+}
+.home-logo {
+  margin-top: 2rem 0;
+  text-align: center;
 }
 .home__text {
   max-width: 300px;
