--- a/Css/styles.css
+++ b/Css/styles.css
@@ -110,13 +110,15 @@ nav {
 -----------------------------------------------------------*/
 .home-container {
   width: 100%;
+  position: relative;
+  min-height: 100vh;
   background: url(/images/photos/pexels-darshak-pandya-4378759.jpg);
   background-repeat: no-repeat;
   background-color: var(--clr-black);
   background-size: cover;
   background-position: 0 62%;
 }
-.home-content {
+.home-container .home-content {
  height: 91.1vh; 
  display: flex;
  flex-direction: column;
@@ -138,7 +140,7 @@ nav {
   max-width: 300px;
 }
 .cta__home {
-  max-width: 200px;
+  width: 200px;
   margin: auto;
   text-decoration: none;
   text-align: center;
@@ -146,11 +148,14 @@ nav {
   text-transform: uppercase;
   border: 2px var(--clr-white) solid;
   border-radius: 5px;
-  padding: 10px 40px;
-  box-shadow: var(--clr-grey) 0 0 5px 1px;
+  padding: 10px 20px;
+  white-space: none;
+  letter-spacing: .1rem;
+  transition: 0.3s;
 }
 .cta__home:hover {
-  box-shadow: var(--clr-white) 0 0 5px 1px;
+  box-shadow: var(--clr-white) 0 0 5px 0;
+  letter-spacing: .2rem;
 }
 .social-icons {
   font-size: 20px;
