--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,6 +3,7 @@
 :root {
   --clr-black: #000;
   --clr-white: #F2F2F2;
+  --clr-clearwhite: #fff;
   --clr-grey: #5A6E61;
   --clr-green: #9EAC8B;
   --clr-lightgreen: #BAC9A3;
@@ -189,6 +190,41 @@ nav {
 
 /* JACKETS PAGE 
 -----------------------------------------------------------*/
+.jackets {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 3rem;
+}
+.box {
+  width: 340px;
+  margin: 20px;
+  border: 1rem solid var(--clr-clearwhite);
+  box-shadow: 0 0 .4rem 0 var(--clr-white);
+}
+.img-box {
+  position: relative;
+  width: 100%;
+  height: 20rem;
+}
+.img-box img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: .1rem solid var(--clr-white);
+}
+.btn {
+  color: var(--clr-text);
+  border: none;
+}
 
 /* PRODUCT PAGE 
 -----------------------------------------------------------*/
