--- a/Css/styles.css
+++ b/Css/styles.css
@@ -26,7 +26,7 @@ h1 {
 }
 h2 {
   color: var(--clr-text);
-  font-weight: 400;
+  font-weight: 500;
 }
 p {
   font-weight: 300;
@@ -197,6 +197,13 @@ nav {
   justify-content: center;
   align-items: center;
 }
+.title {
+  margin-top: 2rem;
+  letter-spacing: .1rem;
+}
+.title-text {
+  color: var(--clr-text)
+}
 .content {
   display: flex;
   justify-content: center;
@@ -206,8 +213,7 @@ nav {
 .box {
   width: 340px;
   margin: 20px;
-  border: 1rem solid var(--clr-clearwhite);
-  box-shadow: 0 0 .4rem 0 var(--clr-white);
+  box-shadow: 0 0 .7rem .3rem var(--clr-white);
 }
 .img-box {
   position: relative;
