--- a/Css/styles.css
+++ b/Css/styles.css
@@ -234,45 +234,49 @@ nav {
 
 /* PRODUCT PAGE 
 -----------------------------------------------------------*/
-
-.product__main a {
-  font-family: futura, sans-serif;
+.product {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.background__img {
-  max-width: 100%;
-  max-height: 100%;
+.product .container {
+  display: flex;
+}
+.product .container .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product .container .box .img-box {
   position: relative;
-  display: block;
-  margin: auto;
+  height: 20rem;
 }
-.inserts__container {
-  position: absolute;
-  top: 30%;
-  left: 60%;
+.product .container .box .img-box img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: .1rem solid var(--clr-white);
 }
-.inserts__png {
-  max-width: 60%;
+.swatch {
+  position:relative;
+  margin: 1rem;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
 }
-.button__container {
-  position: absolute;
-  top: 65%;
-  left: 50%;
+.one {
+  background-color: var(--clr-blue);
 }
-.button__product {
-  min-height: 10%;
-  width: 100px;
-  background-color: #708036;
-  border: 2px solid #fff;
-  border-radius: 18px;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 30px;
-  padding: 10px 30px 15px 0;
-  color: #FFF;
-  text-align: center;
+.two {
+  background-color: var(--clr-red);
 }
-
-
+.three {
+  background-color: var(--clr-green);
+}
 /* CHECKOUT PAGE
 -----------------------------------------------------------*/
 
