--- a/Css/styles.css
+++ b/Css/styles.css
@@ -38,28 +38,40 @@ p {
 nav {
   min-height: 70px;
 }
-.logo {
+nav .list-box {
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+}
+nav .list-box .logo-box,
+nav .list-box .logo-box .logo {
   display: flex;
   align-items: center;
   margin-left: 1rem;
   max-width: 100px;
 }
-.list-box {
-  min-height: 70px;
-  display: flex;
-  justify-content: space-between;
-}
-.nav-menu {
+nav .list-box .nav-menu {
   min-height: 70px;
   z-index: 100;
   margin-right: 1rem;
 }
-.burger-container {
-  width: 90%;
-  margin: 0 auto;
-  display: none;
+nav .list-box .nav-menu li:first-child {
+  border-top: none;
 }
-.hamburger {
+nav .list-box .nav-menu li:last-child {
+  border-top:none;
+}
+nav .list-box .nav-menu li a {
+  color: var(--clr-black);
+  text-decoration: none;
+  font-size: 1.15rem;
+  transition: font-weight 0.2s;
+}
+nav .list-box .nav-menu .social-icons-mobile .nav-link {
+  padding: 0 2rem 0 2rem;
+  color: var(--clr-black);
+}
+nav .list-box .hamburger {
   float: right;
   height: 1.8rem;
   width: 2.6rem;
@@ -71,7 +83,7 @@ nav {
   cursor: pointer;
   display: none;
 }
-.strip {
+nav .list-box .hamburger .strip {
   display: block;
   height: .3rem;
   width: 2rem;
@@ -79,33 +91,19 @@ nav {
   background-color: var(--clr-black);
   justify-content: space-around;
   align-items: center;
+  transition: 0.5s;
 }
-.hamburger.active:hover .strip:nth-child(1),
-.hamburger:hover .strip:nth-child(1),
-.hamburger.active:hover .strip:nth-child(2),
-.hamburger:hover .strip:nth-child(2),
-.hamburger.active:hover .strip:nth-child(3),
-.hamburger:hover .strip:nth-child(3) {
+nav .list-box .hamburger.active:hover .strip:nth-child(1),
+nav .list-box .hamburger:hover .strip:nth-child(1),
+nav .list-box .hamburger.active:hover .strip:nth-child(2),
+nav .list-box .hamburger:hover .strip:nth-child(2),
+nav .list-box .hamburger.active:hover .strip:nth-child(3),
+nav .list-box .hamburger:hover .strip:nth-child(3) {
   background-color: var(--clr-red);
   height: .35rem;
   width: 2.05rem;
 }
-.nav-link {
-  padding: 0 2rem 0 2rem;
-  color: var(--clr-black);
-}
-.nav-menu li:first-child {
-  border-top: none;
-}
-.nav-menu li:last-child {
-  border-top:none;
-}
-.nav-menu li a {
-  color: var(--clr-black);
-  text-decoration: none;
-  font-size: 1.15rem;
-  transition: font-weight 0.2s;
-}
+
 
 /* HOME PAGE 
 -----------------------------------------------------------*/
@@ -158,24 +156,24 @@ nav {
   box-shadow: var(--clr-white) 0 0 5px 0;
   letter-spacing: .2rem;
 }
-.social-icons {
+.home-container .social-icons {
   font-size: 20px;
   list-style-type: none;
   display: flex;
   position: absolute;
 }
-.social-icons a {
+.home-container .social-icons a {
   color: var(--clr-black);
 }
-.social-link a:hover, nav a:hover {
+nav .list-box .nav-menu .social-icons-mobile .social-link a:hover, nav a:hover {
   color: var(--clr-red);
   cursor: pointer;
   font-size: 1.13rem;
 }
-.social-link {
+nav .list-box .nav-menu .social-icons-mobile .social-link {
   padding: 1rem .5rem;
 }
-.social-icons-mobile {
+nav .list-box .nav-menu .social-icons-mobile {
   display: flex;
   justify-content: space-around;
 }
@@ -495,20 +493,20 @@ nav {
       transform: translateX(100rem);
       transition: 0.5s;
     }
-    .hamburger{
+    nav .list-box .hamburger{
       display: flex;
       margin-right: 2rem;
     }
-    .hamburger.active .strip:nth-child(2){
+    nav .list-box .hamburger.active .strip:nth-child(2){
       opacity: 0;
     }
-    .hamburger.active .strip:nth-child(1){
+    nav .list-box .hamburger.active .strip:nth-child(1){
       transform: translateY(10px) rotate(45deg);
     }
-    .hamburger.active .strip:nth-child(3){
+    nav .list-box .hamburger.active .strip:nth-child(3){
       transform: translateY(-10px) rotate(-45deg);
     }
-    .social-icons {
+    .home-container .social-icons {
       width: 200px;
       font-size: 15px;
       padding-top: 2rem;
@@ -523,21 +521,21 @@ nav {
     }
   }
   @media(min-width: 769px) {
-    .nav-menu{
+    nav .list-box .nav-menu{
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    .nav-link {
+    nav .list-box .nav-menu .nav-link {
       list-style: none;
     }
-    .sub-link {
+    nav .list-box .nav-menu .sub-link {
       display: none;
     }
-    .social-sub-link {
+    nav .list-box .nav-menu .social-icons-mobile .social-sub-link {
       display: none;
     }
-    .social-icons {
+    .home-container .social-icons {
       flex-direction: column;
       margin-left: 4rem;
       margin-top: 23vh;
