--- a/Css/styles.css
+++ b/Css/styles.css
@@ -184,14 +184,12 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
   box-shadow: var(--clr-white) 0 0 5px 0;
   letter-spacing: .2rem;
 }
-
-
-.licence {
+.home-container .home-content .licence {
   padding: 10px 20px;
   font-size: 0.6rem;
   text-transform: uppercase;
 }
-.licence a {
+.home-container .home-content a {
   color: var(--clr-white);
 }
 
