--- a/Css/styles.css
+++ b/Css/styles.css
@@ -117,8 +117,8 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
 }
 
 
-/* HOME PAGE 
------------------------------------------------------------*/
+/* 
+—————————————————————————‡——————————————————————— INDEX PAGE */
 .home-container {
   width: 100%;
   position: relative;
@@ -134,6 +134,7 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
   list-style-type: none;
   display: flex;
   position: absolute;
+  transition: 0.3s;
 }
 .home-container .social-icons a {
   color: var(--clr-black);
@@ -166,7 +167,7 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
 .home-container .home-content .home-box .home-logo img {
   max-width: 300px;
 }
-.home-container .home-content .home-box .cta__home {
+.home-container .home-content .home-box .cta-home {
   width: 200px;
   margin: auto;
   text-decoration: none;
@@ -180,7 +181,7 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
   letter-spacing: .1rem;
   transition: 0.3s;
 }
-.home-container .home-content .home-box .cta__home:hover {
+.home-container .home-content .home-box .cta-home:hover {
   box-shadow: var(--clr-white) 0 0 5px 0;
   letter-spacing: .2rem;
 }
@@ -232,10 +233,20 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
   object-fit: cover;
   border: .1rem solid var(--clr-white);
 }
-.btn {
-  color: var(--clr-text);
-  border: none;
+.jackets .content .box .text .btn {
+  text-decoration: none;
+  text-align: center;
+  color: var(--clr-black);
+  text-transform: uppercase;
+  padding: 10px 20px;
+  letter-spacing: .1rem;
+  transition: 0.2s;
 }
+.jackets .content .box .text .btn:hover {
+  letter-spacing: .2rem;
+}
+
+
 
 /* PRODUCT PAGE 
 -----------------------------------------------------------*/
